<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beavents</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_hint">Free food</string>
    <string name="search_title">Search</string>
    <string name="home">Home</string>
    <string name="categories">Search by Categories</string>
    <string name="course_number">Search by Course Number</string>
    <string name="create_events">Create An Event</string>
    <string name="your_interests">Suggested Events</string>
    <string name="saved_events">My Saved Events</string>
    <string name="created_events">My Created Events</string>
    <string name="settings">Settings</string>
    <string-array name= "menu">
        <item >All Events</item>
        <item>Suggested Events</item>
        <item>Search by Categories</item>
        <item>Search by Course Number</item>
        <item>Create Event</item>
        <item>My Saved Events</item>
        <item>My Created Events</item>
        <item>Settings</item>
    </string-array>

    <string-array name= "eventCategories">
        <item >Free Food</item>
        <item>Pset Parties</item>
        <item>Arts/Film</item>
        <item>Sports</item>
        <item>Job Opportunities</item>
        <item>Talks</item>
    </string-array>

    <string name="Event">Event</string>
    <string name="title_activity_event">Event Activity</string>


    <!--Preference Strings-->
    <string name="notification_preferences">Notifications</string>
    <string name="title_notification_on_off_preference">Turn Notifications On or Off</string>
    <string name="summary_notification_on_off_preference"></string>
    <string name="title_notification_saved_only_preference">Notifications for saved events only</string>
    <string name="summary_notification_saved_only_preference"></string>
    <string name="title_notification_time_preference">Notification Frequency</string>
    <string name="summary_notification_time_preference"></string>
    <string name="dialog_title_notification_time_preference">Notification Frequency</string>
    <string name="interest_preferences">Set Interests</string>
    <string name="title_add_course_interest_preference">Course Number</string>
    <string name="summary_add_course_interest_preference">Set course interests</string>
    <string name="dialog_title_add_course_interest_preference">Course Number</string>
    <string name="title_add_category_interest_preference">Category</string>
    <string name="summary_add_category_interest_preference">Set category interests</string>
    <string name="dialog_title_add_category_interest_preference">Category</string>
    <string name="title_remove_interest_preference">Remove an interest</string>
    <string name="summary_remove_interest_preference"></string>
    <string name="dialog_title_remove_interest_preference">Select all interests to remove</string>

    <!--Create Event Strings-->
    <string name="pick_date">Click to set date of event</string>
    <string name="pick_start">Pick start time</string>
    <string name="pick_end">Pick end time</string>


    <string name="add_to_calendar"><u>Add to Google Calendar</u></string>
    <string name="usage">Usage Statistics</string>

</resources>
