<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Event Name"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:background="#33b5e5"
                    android:padding="10px" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventTitle"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:hint="(name)"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="Date/Time"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:background="#33b5e5"
                    android:padding="10px" />
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:text="@string/pick_date"
                    android:onClick="showDatePickerDialog"
                    android:layout_gravity="center_horizontal"
                    android:background="#dadada"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_weight="2.24"
                    style="@style/Base.TextAppearance.AppCompat.Body1">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/startTime"
                        android:text="@string/pick_start"
                        android:onClick="showDatePickerDialog"
                        android:layout_gravity="center_horizontal"
                        android:background="#dadada"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TO"
                        android:id="@+id/textView"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/endTime"
                        android:text="@string/pick_end"
                        android:onClick="showDatePickerDialog"
                        android:layout_gravity="center_horizontal"
                        android:background="#dadada"/>
                    </LinearLayout>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="Location"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:background="#33b5e5"
                    android:padding="10px" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/location"
                    android:hint="(location)"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/time"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="Relevant Course (max 2)"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:background="#33b5e5"
                    android:padding="10px" />



                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/course1"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:padding="10px" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/course2"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:padding="10px" />
                <!--<Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/course3"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />-->

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="Relevant Categories (max 3)"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:background="#33b5e5"
                    android:padding="10px" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/category1"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:padding="10px" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/category2"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:padding="10px" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/category3"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="10px" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="Description"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:background="#33b5e5"
                    android:padding="10px" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="175dp"
                    android:id="@+id/description"
                    android:hint="Description"
                    android:gravity="top|left"
                    android:layout_below="@+id/categories"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="Choose Image"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:background="#33b5e5"
                    android:padding="10px" />
                <Button
                    android:id="@+id/buttonLoadPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:onClick="loadImagefromGallery"
                    android:text="Load Picture"
                    android:layout_marginBottom="10dp"
                    android:background="#dadada" />

                <ImageView
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imgView" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:onClick="uploadImage"
                    android:text="Upload"
                    android:background="#dadada"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>


</android.support.v4.widget.DrawerLayout>